# delivery_system_api

./: .gitignore  estrutura.txt  pyproject.toml
app/: main.py  run.py
app/application/use_cases/: authenticate_sercive.py  order_service.py  user_service.py
app/config/: dependency_db.py
app/domain/entities/: orders.py  restaurant.py
app/domain/exceptions/: exception.py
app/domain/repositories/: order_repository.py  restaurant_interface.py  restaurant_repository.py  user_repository.py
app/infrastructure/database/: connection.py
app/infrastructure/database/models/: order.py  order_items.py  restaurant.py  user.py
app/infrastructure/repositories/: order_repository_implementation.py  restaurant_respository_implementation.py  user_repository_implementation.py
app/infrastructure/security/: auth_service.py  jwt_service.py
app/infrastructure/websockets/: connection_manager.py
app/interfaces/api/: login_controller.py  order_controller.py  user_controller.py
app/interfaces/dependencies/: login_dependency.py  order_dependency.py  restaurant_dependency.py  user_dependency.py
app/interfaces/handler/: exceptions_handler.py
app/interfaces/mappers/: order_mapper.py  restaurant_mapper.py  user_mapper.py
app/interfaces/schemas/: login_schemas.py  order_item_schemas.py  order_schemas.py  restaurant_schemas.py
app/interfaces/websockets/: order_web_controller.py  websocket_controller.py
